--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.11.0",
     "@nuxt/ui": "^3.0.1",
+    "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.15",
     "nuxt": "^3.16.1",
+    "pinia": "^3.0.1",
     "tailwindcss": "^4.0.15",
+    "v-network-graph": "^0.9.20",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   }
