--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.15",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "tailwindcss": "^4.0.15",
     "v-network-graph": "^0.9.20",
     "vue": "^3.5.13",
