--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxt/ui": "^3.0.1",
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.15",
+    "@vee-validate/nuxt": "^4.15.0",
     "eslint": "^9.23.0",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
@@ -27,7 +28,8 @@
     "tailwindcss": "^4.0.15",
     "v-network-graph": "^0.9.20",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.11",
