--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "pinia-plugin-persistedstate": "^4.2.0",
     "tailwindcss": "^4.0.15",
     "v-network-graph": "^0.9.20",
+    "valibot": "^1.0.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "yup": "^1.6.1"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.11",
