feat: upgrade to nuxt 4

--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "@nuxt/eslint": "^1.2.0",
     "@nuxt/icon": "^1.11.0",
     "@nuxt/ui": "^3.0.1",
-    "@pinia/nuxt": "^0.10.1",
+    "@pinia/nuxt": "0.11.1",
     "@tailwindcss/vite": "^4.0.15",
     "@vee-validate/nuxt": "^4.15.0",
     "@vuepic/vue-datepicker": "^11.0.2",
     "dagre": "^0.8.5",
     "eslint": "^9.23.0",
-    "nuxt": "^3.16.1",
-    "pinia": "^3.0.1",
-    "pinia-plugin-persistedstate": "^4.2.0",
+    "nuxt": "^4.0.3",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "tailwindcss": "^4.0.15",
     "v-network-graph": "^0.9.20",
     "valibot": "^1.0.0",
