--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prettyfix": "prettier . --write --list-different"
   },
   "dependencies": {
-    "@nuxt/eslint": "^1.2.0",
+    "@nuxt/eslint": "1.9.0",
     "@nuxt/icon": "^1.11.0",
     "@nuxt/ui": "^3.0.1",
     "@pinia/nuxt": "0.11.1",
