--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
-    "@nuxt/icon": "^1.11.0",
+    "@nuxt/icon": "1.15.0",
     "@nuxt/ui": "^3.0.1",
     "@pinia/nuxt": "0.11.1",
     "@tailwindcss/vite": "^4.0.15",
