--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
     "@nuxt/icon": "1.15.0",
-    "@nuxt/ui": "^3.0.1",
+    "@nuxt/ui": "3.3.4",
     "@pinia/nuxt": "0.11.1",
     "@tailwindcss/vite": "^4.0.15",
     "@vee-validate/nuxt": "^4.15.0",
