--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@vee-validate/nuxt": "4.15.1",
     "eslint": "9.36.0",
     "nuxt": "4.1.2",
-    "pinia": "^3.0.3",
+    "pinia": "3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "tailwindcss": "^4.0.15",
     "v-network-graph": "^0.9.20",
