--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint": "9.36.0",
     "nuxt": "4.1.2",
     "pinia": "3.0.3",
-    "pinia-plugin-persistedstate": "^4.5.0",
+    "pinia-plugin-persistedstate": "4.5.0",
     "tailwindcss": "^4.0.15",
     "v-network-graph": "^0.9.20",
     "valibot": "^1.0.0",
