--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "pinia-plugin-persistedstate": "4.5.0",
     "tailwindcss": "4.1.13",
     "v-network-graph": "0.9.21",
-    "valibot": "^1.0.0",
+    "valibot": "1.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
