--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "tailwindcss": "4.1.13",
     "v-network-graph": "0.9.21",
     "valibot": "1.1.0",
-    "vue": "^3.5.13",
+    "vue": "3.5.21",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
