--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "v-network-graph": "0.9.21",
     "valibot": "1.1.0",
     "vue": "3.5.21",
-    "vue-router": "^4.5.0"
+    "vue-router": "4.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.11",
