--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "vue-router": "4.5.1"
   },
   "devDependencies": {
-    "@types/node": "^22.13.11",
+    "@types/node": "22.18.6",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.5.3"
