--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@types/node": "22.18.6",
     "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-prettier": "5.5.4",
     "prettier": "^3.5.3"
   }
 }
