--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "@types/node": "22.18.6",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.4",
-    "prettier": "^3.5.3"
+    "prettier": "3.6.2"
   }
 }
