--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,12 +5,16 @@
   "forwardPorts": [3000],
   "portsAttributes": {
     "3000": {
-      "label": "Nuxt App",
+      "label": "ADPwn UI",
       "onAutoForward": "notify"
     }
   },
+  "mounts": [
+    "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
+    "source=nuxt_node_modules,target=/workspace/node_modules,type=volume"
+  ],
   "postCreateCommand": "npm install",
-  "postStartCommand": "npm run dev",
+  "postStartCommand": "rsync -a /workspace/.node_modules_cache/ /workspace/node_modules/ 2>/dev/null || true && npm run dev",
   "customizations": {
     "vscode": {
       "extensions": [
@@ -20,9 +24,13 @@
       ]
     }
   },
+  "remoteEnv": {
+    "API_BASE_URL": "http://adpwn-core:8081"
+  },
   "remoteUser": "node",
   "runArgs": [
     "--init",
-    "--security-opt", "no-new-privileges:true"
+    "--security-opt", "no-new-privileges:true",
+    "--network=adpwn_network"
   ]
 }
