--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,36 +1,39 @@
 {
-  "name": "ADPwn UI Dev Container",
-  "dockerFile": "Dockerfile",
-  "context": "..",
-  "forwardPorts": [3000],
-  "portsAttributes": {
-    "3000": {
-      "label": "ADPwn UI",
-      "onAutoForward": "notify"
-    }
-  },
-  "mounts": [
-    "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
-    "source=nuxt_node_modules,target=/workspace/node_modules,type=volume"
-  ],
-  "postCreateCommand": "npm install",
-  "postStartCommand": "rsync -a /workspace/.node_modules_cache/ /workspace/node_modules/ 2>/dev/null || true && npm run dev",
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "Vue.volar",
-        "dbaeumer.vscode-eslint",
-        "esbenp.prettier-vscode"
-      ]
-    }
-  },
-  "remoteEnv": {
-    "API_BASE_URL": "http://adpwn-core:8081"
-  },
-  "remoteUser": "node",
-  "runArgs": [
-    "--init",
-    "--security-opt", "no-new-privileges:true",
-    "--network=adpwn_network"
-  ]
+    "name": "ADPwn UI Dev Container",
+    "dockerFile": "Dockerfile",
+    "context": "..",
+    "forwardPorts": [3000],
+    "portsAttributes": {
+        "3000": {
+            "label": "ADPwn UI",
+            "onAutoForward": "notify"
+        }
+    },
+    "workspaceFolder": "/workspace",
+    "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
+    "mounts": [
+        "source=nuxt_node_modules,target=/workspace/node_modules,type=volume",
+        "source=nuxt_cache,target=/workspace/.nuxt,type=volume",
+        "source=nuxt_output,target=/workspace/.output,type=volume"
+    ],
+    "onCreateCommand": "sudo chown -R node:node /workspace/node_modules /workspace/.nuxt /workspace/.output",
+    "postCreateCommand": "npm install",
+    "postStartCommand": "npm run dev",
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "Vue.volar",
+                "dbaeumer.vscode-eslint",
+                "esbenp.prettier-vscode"
+            ]
+        }
+    },
+    "remoteEnv": {
+        "API_BASE_URL": "http://adpwn-core:8081"
+    },
+    "remoteUser": "node",
+    "runArgs": [
+        "--init",
+        "--network=adpwn_network"
+    ]
 }
