--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-router": "4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "1.2.70",
     "@types/node": "22.18.6",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.4",
